# cache-sweep

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.tape
.claude/: settings.json
.claude/commands/: explain.md
docs/: index.html
src/: main.rs
src/cli/: args.rs
src/delete/: engine.rs  mod.rs
src/output/: json.rs  mod.rs  stream.rs
src/profiles/: builtin.rs  mod.rs
src/risk/: analysis.rs  mod.rs
src/scanner/: batcher.rs  mod.rs  size.rs  walker.rs
src/tui/: analytics.rs  app.rs  cleanup.rs  event_loop.rs  input.rs  mod.rs  ui.rs
src/tui/panels/: analytics.rs  help.rs  info.rs  mod.rs  options.rs
src/tui/widgets/: gradient_bar.rs  mod.rs
tests/: integration_tests.rs
